2025-12-12 GarlicDude <https://www.github.com/thatgarlicdude>

	PacIO Version 1.1.0-alpha
	* Added RomOpener.java.
		* This class contains helper methods for opening PacRoms and PacRomSets.
		* It can also help create an ArrayList of PacRoms for the PacRomSet.
	* Removed Openable.java.
	* Added Closable.java as a replacement for Openable.java.
		* It only contains an abstract close method.
	* Updated PacFile.java.
		* Removed the other constructors, only leaving with one.
	* Updated PacRom.java.
		* The main constructor is now set to default instead of public to make up for the RomOpener.
		* Like PacFile.java, the other constructors were removed.
		* PacRom no longer implements Openable.
		* Instead, PacRom implements the newly added Closable interface.
		* The close method now clears its data array with zeroes.
	* Updated PacRomSet.java.
		* Changes from PacRom.java were applied as well.
		* For the close method, it now closes the PacRoms in the PacRomSet.

2025-12-11 GarlicDude <https://www.github.com/thatgarlicdude>

	PacIO Version 1.0.1-alpha
	* Updated all the Java files.
		* Every Java file now have tabbed gaps in between each member of a class.
	* Updated PacFile.java.
		* Added another main constructor, which sets a custom name to the object.
	* Updated PacRom.java.
		* Added a main constructor, which sets the path and custom name to the object.
		* The path constructor now calls open() after the super constructor.
		* Because of this, all the other constructors throw the IOException.
		* The other constructors now use this() instead of super().
	* Updated PacRomSet.java.
		* Same thing as PacRom.java.
	* Updated TestPacRom.java.
		* Because PacRomSets can be automatically opened, there's no need to call open() from the testRomSet.
	* Updated TestPacRomSet.java.
		* Same thing as TestPacRom.java.

2025-12-05 GarlicDude <https://www.github.com/thatgarlicdude>

	PacIO Version 1.0.0-alpha
	* Added the base files.