@@ -25,6 +25,10 @@ public final class PacRomSet extends PacFile implements Closable {
 	/**The ROMs within the ROM set directory.*/
 	private ArrayList<PacRom> roms;
 	
+	public ArrayList<PacRom> getRoms() {
+		return this.roms;
+	}
+	
 	/**Closes the ROM set directory.*/
 	@Override
 	public final void close() {
